--- a/index.html
+++ b/index.html
@@ -3,10 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Auto4Sale</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="./dist/styles.css">
 </head>
 <body>
-    
+    <header>
+        <nav class="container px-2 sm:px-4 md:px-9 flex justify-between mt-2 lg:px-0 lg:mx-auto lg:mt-3 text-white">
+            <a href="./index.html" class="order-2 lg:order-1">
+                <img src="/assets/images/logos/main-logo-white.svg" alt="a car logo called with auto 4 sale beneath it" class="w-16 h-10 lg:h-10 lg:w-20">
+            </a>
+
+            <button class="lg:hidden flex order-1">
+                <span class="material-symbols-rounded">
+                    menu
+                </span>
+            </button>
+
+            <ul class="hidden lg:flex lg:gap-5 lg:items-center fixed lg:relative lg:order-2">
+                <li><a href="">General</a></li>
+                <li><a href="">Services</a></li>
+                <li><a href="">Sports Models</a></li>
+                <li><a href="">Modal Builder</a></li>
+                <li><a href="">Who We Are</a></li>
+            </ul>
+
+            <ul class="flex lg:gap-4 lg:items-center order-3">
+                <li>
+                    <a href="">
+                        <span class="material-symbols-rounded">
+                            shopping_bag
+                        </span>
+                    </a> 
+                </li>
+                <!-- display if Admin-->
+                <li>
+                    <a href="">
+                        <span class="material-symbols-rounded">
+                            admin_panel_settings
+                        </span>
+                    </a>
+                </li>
+                <!-- display if Customer-->
+                <li class="hidden">
+                    <span class="material-symbols-rounded">
+                        account_circle
+                    </span>
+                </li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
