--- a/assets/subwebpages/webbuilder/auto4sale-webbuilder.html
+++ b/assets/subwebpages/webbuilder/auto4sale-webbuilder.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Auto4Sale | Admin | WebBuilder</title>
-    <link rel="stylesheet" href="../../dist/styles.css"/>
-    <link rel="stylesheet" href="../stylesheets/minor-modifications.css"/>
+    <link rel="stylesheet" href="../../../dist/styles.css"/>
+    <link rel="stylesheet" href="../../stylesheets/minor-modifications.css"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body class="background-dark flex flex-col justify-center items-center">
@@ -16,7 +16,7 @@
                 <li class="grid items-center websitebuilder-border-r background-dark ">
                     <a href="./admin.html" title="Back To Admin Panel" class="z-50 background-dark w-full h-full flex justify-center items-center">
                         <div class="p-1 w-11 ">
-                            <img src="../images/logos/main-logo-white-car.svg" alt="" class="object-cover image-effect-glow">
+                            <img src="../../../assets/images/logos/main-logo-white-car.svg" alt="" class="object-cover image-effect-glow">
                         </div>
                     </a>
                 </li>
