--- a/assets/subwebpages/admin-dashboard/admin.html
+++ b/assets/subwebpages/admin-dashboard/admin.html
@@ -903,8 +903,7 @@
                       <label for="revenue" class="block text-sm font-medium text-gray-700 mb-1">Revenue Generated</label>
                       <div class="flex items-center border rounded-lg overflow-hidden bg-gray-50">
                         <span class="material-symbols-rounded text-gray-400 px-3">bar_chart</span>
-                        <input type="number" id="revenue" name="revenue" placeholder="Enter revenue" 
-                              class="salesmanInfo w-full py-2 px-3 text-gray-700 bg-gray-50 focus:outline-none focus:ring-2 focus:ring-blue-500">
+                        <input type="number" id="revenue" name="revenue" placeholder="Enter revenue" class="salesmanInfo w-full py-2 px-3 text-gray-700 bg-gray-50 focus:outline-none focus:ring-2 focus:ring-blue-500">
                       </div>
                     </div>
                     <!-- Cars Sold -->
@@ -912,19 +911,16 @@
                       <label for="cars-sold" class="block text-sm font-medium text-gray-700 mb-1">Cars Sold</label>
                       <div class="flex items-center border rounded-lg overflow-hidden bg-gray-50">
                         <span class="material-symbols-rounded text-gray-400 px-3">directions_car</span>
-                        <input type="number" id="cars-sold" name="carsSold" placeholder="Enter cars sold" 
-                              class="salesmanInfo w-full py-2 px-3 text-gray-700 bg-gray-50 focus:outline-none focus:ring-2 focus:ring-blue-500">
+                        <input type="number" id="cars-sold" name="carsSold" placeholder="Enter cars sold" class="salesmanInfo w-full py-2 px-3 text-gray-700 bg-gray-50 focus:outline-none focus:ring-2 focus:ring-blue-500">
                       </div>
                     </div>
                   </fieldset>
 
                   <!-- reset form btn -->
-                  <input type="reset" value="Reset"
-                  style="background-color: red; color: white" />
+                  <input type="reset" value="Reset" class="text-red-600 hover:text-red-800 bg-none hover:underline cursor-pointer" />
             
                   <!-- Submit Button -->
-                  <button type="button" 
-                          class="w-full bg-blue-500 text-white text-sm font-medium py-2 rounded-lg hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500" id="addSalesmanSubmitBtn">
+                  <button type="button" class="w-full bg-blue-500 text-white text-sm font-medium py-2 rounded-lg hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500" id="addSalesmanSubmitBtn">
                     <span class="material-symbols-rounded align-middle mr-2">done</span>
                     Submit
                   </button>
@@ -945,7 +941,7 @@
                 <h3 class="text-lg font-bold text-center md:text-left">Total Staff</h3>
                 <p class="text-3xl mt-2 text-center md:text-left pb-12">35</p>
                 <div class="mt-4 absolute bottom-3">
-                  <button class="w-full px-5 md:px-6 py-1 md:py-2 bg-gradient-to-r from-purple-500 to-purple-700 text-white font-bold rounded-md shadow-md hover:bg-gradient-to-r hover:from-purple-600 hover:to-purple-800 transition-all websitebuilder-scale">
+                  <button data-filter="all" id="viewTotalEmployeeBtn" class="w-full px-5 md:px-6 py-1 md:py-2 bg-gradient-to-r from-purple-500 to-purple-700 text-white font-bold rounded-md shadow-md hover:bg-gradient-to-r hover:from-purple-600 hover:to-purple-800 transition-all websitebuilder-scale">
                     View Employees
                   </button>
                 </div>
@@ -956,7 +952,7 @@
                 <h3 class="text-lg font-bold text-center md:text-left">Need to Hire</h3>
                 <p class="text-3xl mt-2 text-center md:text-left pb-12">5</p>
                 <div class="mt-4 absolute bottom-4">
-                  <button class="w-full px-5 md:px-6 py-1 md:py-2 bg-gradient-to-r from-blue-500 to-blue-700 text-white font-bold rounded-md shadow-md hover:bg-gradient-to-r hover:from-blue-600 hover:to-blue-800 transition-all websitebuilder-scale">
+                  <button data-filter="Not Hired" id="potentialEmployeesToHireBtn" class="w-full px-5 md:px-6 py-1 md:py-2 bg-gradient-to-r from-blue-500 to-blue-700 text-white font-bold rounded-md shadow-md hover:bg-gradient-to-r hover:from-blue-600 hover:to-blue-800 transition-all websitebuilder-scale">
                     Hire Employees
                   </button>
                 </div>
@@ -967,7 +963,7 @@
                 <h3 class="text-lg font-bold text-center md:text-left">Need To Pay</h3>
                 <p class="text-3xl mt-2 text-center md:text-left pb-12">10</p>
                 <div class="mt-4 absolute bottom-4">
-                  <button class="w-full px-5 md:px-6 py-1 md:py-2 bg-gradient-to-r from-red-500 to-red-700 text-white font-bold rounded-md shadow-md hover:bg-gradient-to-r hover:from-red-600 hover:to-red-800 transition-all websitebuilder-scale">
+                  <button  data-filter="Not Paid" id="needToPayBtn" class="w-full px-5 md:px-6 py-1 md:py-2 bg-gradient-to-r from-red-500 to-red-700 text-white font-bold rounded-md shadow-md hover:bg-gradient-to-r hover:from-red-600 hover:to-red-800 transition-all websitebuilder-scale">
                     Pay Employees
                   </button>
                 </div>
@@ -978,7 +974,7 @@
                 <h3 class="text-lg font-bold text-center md:text-left">Employee Queries</h3>
                 <p class="text-3xl mt-2 text-center md:text-left pb-12">3</p>
                 <div class="mt-4 absolute bottom-4">
-                  <button class="w-full px-5 md:px-6 py-1 md:py-2 bg-gradient-to-r from-yellow-500 to-yellow-700 text-white font-bold rounded-md shadow-md hover:bg-gradient-to-r hover:from-yellow-600 hover:to-yellow-800 transition-all websitebuilder-scale">
+                  <button data-filter="Inactive" class="w-full px-5 md:px-6 py-1 md:py-2 bg-gradient-to-r from-yellow-500 to-yellow-700 text-white font-bold rounded-md shadow-md hover:bg-gradient-to-r hover:from-yellow-600 hover:to-yellow-800 transition-all websitebuilder-scale">
                     View Queries
                   </button>
                 </div>
@@ -988,7 +984,7 @@
           <!-- actions -->
           <ul class="gap-4 hidden md:flex">  
             <li>
-                <button class="px-5 py-2 bg-gradient-to-r from-blue-600 to-indigo-700 text-white rounded-full font-semibold shadow-md hover:shadow-lg transition-all duration-300 ease-in-out transform hover:scale-105">
+                <button class="px-5 py-2 bg-gradient-to-r from-blue-600 to-indigo-700 text-white rounded-full font-semibold shadow-md hover:shadow-lg transition-all duration-300 ease-in-out transform hover:scale-105" id="addEmployeeBtn">
                     + Add Employee
                 </button>
             </li>
@@ -1006,6 +1002,7 @@
           <section id="employee-cards" class="grid grid-cols-1 sm:grid-cols-2 gap-6 mt-8">
             <!-- cards automatically generated using javascript -->
           </section> 
+
         </article>
 
         <!-- Manufacture Management Section -->
