--- a/assets/subwebpages/admin-dashboard/admin.html
+++ b/assets/subwebpages/admin-dashboard/admin.html
@@ -15,6 +15,10 @@
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js" defer></script>
     <script src="./scripts/charts.js" defer></script>
+
+    <!-- library for adding pdfs -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
+
 </head>
 <body>
     <header>
@@ -1459,7 +1463,7 @@
                       <span class="material-symbols-rounded">visibility</span> Preview
                   </button>
                   <button type="button" id="downloadInvoice" class="flex items-center gap-2 bg-green-500 text-white py-2 px-4 rounded-lg shadow">
-                      <span class="material-symbols-rounded">download</span> Download
+                    <span class="material-symbols-rounded">download</span> Download
                   </button>
                   <button type="button" id="printInvoice" class="flex items-center gap-2 bg-gray-500 text-white py-2 px-4 rounded-lg shadow">
                       <span class="material-symbols-rounded">print</span> Print
