--- a/assets/subwebpages/admin-dashboard/admin.html
+++ b/assets/subwebpages/admin-dashboard/admin.html
@@ -1625,10 +1625,10 @@
             <form id="tax-form" class="space-y-6">
               <!-- Income Input -->
               <div>
-                <label for="income" class="block text-sm font-medium text-gray-600">Enter Your Income</label>
+                <label for="income-number" class="block text-sm font-medium text-gray-600">Enter Your Income</label>
                 <input 
                   type="number" 
-                  id="income" 
+                  id="income-number" 
                   class="mt-2 w-full p-3 border rounded-md shadow-sm border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-500"
                   placeholder="e.g., 50000"
                 >
@@ -1636,10 +1636,10 @@
         
               <!-- Tax Rate Input -->
               <div>
-                <label for="tax-rate" class="block text-sm font-medium text-gray-600">Tax Rate (%)</label>
+                <label for="tax-rate-number" class="block text-sm font-medium text-gray-600">Tax Rate (%)</label>
                 <input 
                   type="number" 
-                  id="tax-rate" 
+                  id="tax-rate-number" 
                   class="mt-2 w-full p-3 border rounded-md shadow-sm border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-500"
                   placeholder="e.g., 15"
                 >
