--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     <!-- Featured Cars Section -->
     <main>
         <section class="py-12 my-14 min-h-screen">
-            <article class="max-w-7xl mx-auto px-6">
+            <article class="max-w-7xl mx-auto px-6" id="articleContainer">
                 <section class="flex flex-col justfiy-center items-center gap-4 mb-8">
                     <h2 class="text-2xl md:text-6xl bg-gradient-to-r from-gray-200 to-gray-400 text-center text-transparent bg-clip-text">Find Your Exclusive Brand</h2>
                     <p class="text-center md:w-2/4 text-gray-300">
@@ -160,9 +160,11 @@
                     </p>
                 </section>
                 
-                <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 " id="cardContainer">
+                <section class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 " id="cardContainer">
                     <!-- Repeat for more cars -->
-                </div>
+                </section>
+
+
                 
             </article>
         </section>
