--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body class="index--dark-background  text-gray-100">
     <!-- Header -->
     <header class="h-10 flex justify-evenly items-center fixed left-0 w-screen top-0 z-50 bg-gradient-to-t to-black from-transparent md:px-9">
-        <a href="/index.html" class="z-50 absolute top-2 left-2 md:static md:inline-block transform transition-transform hover:scale-110">
+        <a href="./index.html" class="z-50 absolute top-2 left-2 md:static md:inline-block transform transition-transform hover:scale-110">
             <img src="./assets/images/logos/main-logo-white.svg" alt="Auto4Sale logo" class="w-16 image-effect-glow">
         </a>
 
@@ -33,7 +33,7 @@
                     <a href="" class="text-gray-300 hover:text-white block border-b-2 md:border-none pb-1 w-full">Community</a>
                 </li>
                 <li class="w-full md:w-auto">
-                    <a href="/assets/subwebpages/contact-form/contact.html" class="text-gray-300 hover:text-white block border-b-2 md:border-none pb-1 w-full">Contact</a>
+                    <a href="./assets/subwebpages/contact-form/contact.html" class="text-gray-300 hover:text-white block border-b-2 md:border-none pb-1 w-full">Contact</a>
                 </li>
                 <li class="w-full md:w-auto">
                     <a href="" class="text-gray-300 hover:text-white block border-b-2 md:border-none pb-1 w-full">About</a>
