--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
         <nav class="transition-all h-0 w-1/2 fixed right-0 top-0 bg-black md:bg-transparent lg:bg-transparent md:h-auto md:static overflow-y-auto flex flex-col md:flex-row items-center justify-between md:flex-grow text-sm px-3 md:p-3 font-semibold" id="toggleMenu">
             <ul class="mt-20 md:mt-0 flex flex-col md:flex-row md:justify-center items-center gap-6 w-full">
                 <li class="w-full md:w-auto">
-                    <a href="" class="text-gray-300 hover:text-white block border-b-2 md:border-none pb-1 w-full">Inventory</a>
+                    <a href="" class="text-gray-300 hover:text-white block border-b-2 md:border-none pb-1 w-full">Community</a>
+                </li>
+                <li class="w-full md:w-auto">
+                    <a href="" class="text-gray-300 hover:text-white block border-b-2 md:border-none pb-1 w-full">Contact</a>
                 </li>
                 <li class="w-full md:w-auto">
                     <a href="" class="text-gray-300 hover:text-white block border-b-2 md:border-none pb-1 w-full">About</a>
-                </li>
-                <li class="w-full md:w-auto">
-                    <a href="" class="text-gray-300 hover:text-white block border-b-2 md:border-none pb-1 w-full">Community</a>
                 </li>
             </ul>
 
