--- a/assets/subwebpages/contact-form/contact.html
+++ b/assets/subwebpages/contact-form/contact.html
@@ -12,8 +12,8 @@
 <body class="bg-gradient-to-br from-gray-900 via-gray-800 to-black text-white font-sans">
     <!-- Header -->
     <header class="h-10 flex justify-evenly items-center fixed left-0 w-screen top-0 z-50 bg-gradient-to-t to-black from-transparent md:px-9">
-        <a href="/index.html" class="z-50 absolute top-2 left-2 md:static md:inline-block transform transition-transform hover:scale-110">
-            <img src="/assets/images/logos/main-logo-white.svg" alt="Auto4Sale logo" class="w-16 image-effect-glow">
+        <a href="../../../index.html" class="z-50 absolute top-2 left-2 md:static md:inline-block transform transition-transform hover:scale-110">
+            <img src="../../../assets/images/logos/main-logo-white.svg" alt="Auto4Sale logo" class="w-16 image-effect-glow">
         </a>
 
         <button class="md:hidden absolute right-2 flex w-8 z-50" id="menuBtn">
