--- a/assets/subwebpages/contact-form/contact.html
+++ b/assets/subwebpages/contact-form/contact.html
@@ -31,7 +31,7 @@
                     <a href="" class="text-gray-300 hover:text-white block border-b-2 md:border-none pb-1 w-full">Community</a>
                 </li>
                 <li class="w-full md:w-auto">
-                    <a href="/assets/subwebpages/contact-form/contact.html" class="text-gray-300 hover:text-white block border-b-2 md:border-none pb-1 w-full">Contact</a>
+                    <a href="./contact.html" class="text-gray-300 hover:text-white block border-b-2 md:border-none pb-1 w-full">Contact</a>
                 </li>
                 <li class="w-full md:w-auto">
                     <a href="" class="text-gray-300 hover:text-white block border-b-2 md:border-none pb-1 w-full">About</a>
