added filter functionality to the inventory/store

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     </a>
                 </li>
                 <li class="w-full md:w-auto">
-                    <a href="" class="text-gray-300 hover:text-white flex gap-1 items-center md:justfiy-center w-full border-b-2 border-none pb-1">
+                    <a href="./assets/subwebpages/vehicle-commerce/inventory.html" class="text-gray-300 hover:text-white flex gap-1 items-center md:justfiy-center w-full border-b-2 border-none pb-1">
                         <span class="material-symbols-rounded">
                             shopping_bag_speed
                         </span>
